# Qt6QMLIntermediate_Video

./: README.md
1.DivingIn/10-SingletonObject/: CMakeLists.txt  Main.qml  README.md  main.cpp  mysingleton.cpp  mysingleton.h
1.DivingIn/10-SingletonObject/module/: CMakeLists.txt  commsmanager.cpp  commsmanager.h
1.DivingIn/2-ContextProperties/: CHANGES.md  CMakeLists.txt  Other.qml  cppworker.cpp  cppworker.h  main.cpp  main.qml
1.DivingIn/3-Connections/: CMakeLists.txt  main.cpp  main.qml
1.DivingIn/4-CppSignal/: CMakeLists.txt  cppsignalsender.cpp  cppsignalsender.h  main.cpp  main.qml
1.DivingIn/5-QPROPERTYMapping/: CMakeLists.txt  main.cpp  main.qml  movie.cpp  movie.h
1.DivingIn/6-ContextObjects/: CMakeLists.txt  main.cpp  main.qml  propertywrapper.cpp  propertywrapper.h
1.DivingIn/7-CallJsFromCpp/: CMakeLists.txt  main.cpp  main.qml  qmljscaller.cpp  qmljscaller.h
1.DivingIn/8-InstantiableObject/: CMakeLists.txt  Main.qml  README.md  main.cpp  movie.cpp  movie.h
1.DivingIn/8-InstantiableObject/module/: CMakeLists.txt  message.cpp  message.h
1.DivingIn/9-InstantiableModule/: CMakeLists.txt  Main.qml  main.cpp
1.DivingIn/9-InstantiableModule/movies/: CMakeLists.txt  movie.h
1.DivingIn/9-RegistrableValueTypes/: CMakeLists.txt  Main.qml  README.md  main.cpp  person.h
1.DivingIn/9-RegistrableValueTypes/module/: CMakeLists.txt  person.cpp  person.h
2.DataConversionsCppQml/2-BasicDataTypes/: CMakeLists.txt  README.md  cppclass.cpp  cppclass.h  main.cpp  main.qml
2.DataConversionsCppQml/3-TimeAndDateTime/: CMakeLists.txt  README.md  cppclass.cpp  cppclass.h  main.cpp  main.qml
2.DataConversionsCppQml/4-DateTimeStringLocalization/: CMakeLists.txt  main.cpp  main.qml
2.DataConversionsCppQml/4-SequenceTypesToJSArrays/: CMakeLists.txt  Main.qml  README.md  main.cpp  main.qml
2.DataConversionsCppQml/5-SequenceTypesToJSArrays/: CMakeLists.txt  cppclass.h  main.cpp  main.qml
2.DataConversionsCppQml/5-VariantListVariantMap/: CMakeLists.txt  Main.qml  cppclass.cpp  cppclass.h  main.cpp  main.qml
2.DataConversionsCppQml/6-VariantListVariantMap/: CMakeLists.txt  README.md  cppclass.h  main.cpp  main.qml
3-Rest/2-RestClientV1/: CMakeLists.txt  Main.qml  appwrapper.cpp  appwrapper.h  main.cpp  main.qml
3-Rest/3-RestFactory/: CMakeLists.txt  Main.qml  appwrapper.cpp  appwrapper.h  main.cpp
3-Rest/4-FetchPosts/: CMakeLists.txt  Main.qml  fetchposts.cpp  fetchposts.h  main.cpp
3.RestClientV1/2-RestClientV1/: CMakeLists.txt  appwrapper.cpp  appwrapper.h  main.cpp  main.qml
4.NonVisualTypes/10-PropertyValueSources/: CMakeLists.txt  main.cpp  main.qml  randomnumber.cpp  randomnumber.h
4.NonVisualTypes/2-CustomTypesCounter/: CMakeLists.txt  counter.cpp  counter.h  main.cpp  main.qml
4.NonVisualTypes/3-MakingUseOfEnums/: CMakeLists.txt  main.cpp
4.NonVisualTypes/3Enums/: CMakeLists.txt  Main.qml  errorlevel.cpp  errorlevel.h  main.cpp  main.qml
4.NonVisualTypes/4-CounterEnumVersion/: CMakeLists.txt  counter.h  counting.h  main.cpp  main.qml
4.NonVisualTypes/5-ObjectAndListProperties/: CMakeLists.txt  footballteam.h  main.cpp  main.qml  player.h
4.NonVisualTypes/6-InheritedTypes/: CMakeLists.txt  footballteam.h  main.cpp  main.qml
4.NonVisualTypes/7-DefaultProperties/: CMakeLists.txt  defender.h  footballteam.h  main.cpp  main.qml  player.h
4.NonVisualTypes/8-GroupedProperties/: CMakeLists.txt  footballteam.h  main.cpp  main.qml  player.h  playerdetails.h  striker.h
4.NonVisualTypes/9-AttachedProperties/: CMakeLists.txt  main.cpp  main.qml  person.h  timer.h  timerattached.cpp  timerattached.h
Slides_new/1.DivingIn/: .$9-InstantiableModule.drawio.bkp  .$9-InstantiableModule.drawio.dtmp  .$9-InstantiableModule.drawio_1.dtmp  10-SingletonObject.drawio  3-Connections.drawio  4-CppSignal.drawio  5-QPROPERTYMapping.drawio  6-ContextObjects.drawio  7-CallJsFromCpp.drawio  8-InstantiableObject.drawio  9-InstantiableModule.drawio
Slides_new/2.DataConversionsCppQml/: 2-BasicDataTypes.drawio  3-TimeAndDateTime.drawio  4-SequenceTypesToJSArrays.drawio  5-VariantListVariantMap.drawio
Slides_new/3.Rest/: .$4-FetchPosts.drawio.bkp  .$4-FetchPosts.drawio.dtmp  2-RestClientV1.drawio  4-FetchPosts.drawio
Slides_new/4.NonVisualTypes/: 10-PropertyValueSources.drawio  2-CustomTypesCounter.drawio  3-MakingUseOfEnums.drawio  4-CounterEnumVersion.drawio  5-ObjectAndListProperties.drawio  6-InheritedTypes.drawio  7-DefaultProperties.drawio  8-GroupedProperties.drawio  9-AttachedProperties.drawio
slides_old/1.DivingIn/2-ContextProperties/: 2-ContextProperties.md
slides_old/1.DivingIn/3-Connections/: 3-Connections.md
slides_old/1.DivingIn/4-CppSignal/: 4-CppSignal.md
slides_old/1.DivingIn/5-QPROPERTYMapping/: 5-QPROPERTYMapping.md
slides_old/1.DivingIn/6-ContextObjects/: 6-ContextObjects.md
slides_old/1.DivingIn/7-CallJsFromCpp/: 7-CallJsFromCpp.md
slides_old/2.DataConversionsCppQml/2-BasicDataTypes/: 2-BasicDataTypes.md
slides_old/2.DataConversionsCppQml/3-TimeAndDateTime/: 3-TimeAndDateTime.md
slides_old/2.DataConversionsCppQml/4-DateTimeStringLocalization/: 4-DateTimeStringLocalization.md
slides_old/2.DataConversionsCppQml/5-SequenceTypesToJSArrays/: 5-SequenceTypesToJSArrays.md
slides_old/2.DataConversionsCppQml/6-VariantListVariantMap/: 6-VariantListVariantMap.md
slides_old/3.RestClientV1/2-RestClientV1/: 2-RestClientV1.md
slides_old/4.NonVisualTypes/10-PropertyValueSources/: 10-PropertyValueSources.md
slides_old/4.NonVisualTypes/2-CustomTypesCounter/: 2-CustomTypesCounter.md
slides_old/4.NonVisualTypes/3-MakingUseOfEnums/: 3-MakingUseOfEnums.md
slides_old/4.NonVisualTypes/4-CounterEnumVersion/: 4-CounterEnumVersion.md
slides_old/4.NonVisualTypes/5-ObjectAndListProperties/: 5-ObjectAndListProperties.md
slides_old/4.NonVisualTypes/6-InheritedTypes/: 6-InheritedTypes.md
slides_old/4.NonVisualTypes/7-DefaultProperties/: 7-DefaultProperties.md
slides_old/4.NonVisualTypes/8-GroupedProperties/: 8-GroupedProperties.md
slides_old/4.NonVisualTypes/9-AttachedProperties/: 9-AttachedProperties.md
